<resources>
    <string name="app_name">CourtCounter</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="_3pt">+3pt</string>
    <string name="_3pt0">+3pt</string>
    <string name="_2pt">+2pt</string>
    <string name="_2pt0">+2pt</string>
    <string name="_1pt">-1pt</string>
    <string name="_1pt0">-1pt</string>
    <string name="reset">Reset</string>
</resources>
